--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                <a class="nav-link" href="/index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="accesorios.html">Accesorios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ingresos.html">Ingresos</a>
+                <a class="nav-link active" aria-current="page" href="ingresos.html">Ingresos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="marcas.html">Marcas</a>
