--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="src\logoOptica.jpg" type="image/x-icon">
     <title>Optica Elda</title>
 </head>
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="html/contacto.html">Contacto</a>
@@ -41,6 +41,19 @@
           </div>
         </div>
       </nav>
+      <main>
+        <div class="contenedorIndex">
+            <div class="productos"><a href="html/ingresos.html">Ingresos</a></div>
+            <div class="productos"><a href="html/marcas.html">Marcas</a></div>
+            <div class="productos"><a href="html/accesorios.html">Accesorios</a></div>
+        </div>
+      </main>
+      <footer>
+        <div class="contenedorFooter">
+            <img class="logo" src="src/logoOptica.jpg" alt="OpticaElda">
+            <h2>Mas de 30 años cuidando tu salud visual</h2>
+        </div>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
