--- a/html/accesorios.html
+++ b/html/accesorios.html
@@ -68,6 +68,12 @@
             </div>
         </div>
     </main>
+    <footer>
+      <div class="contenedorFooter">
+          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <h2>Mas de 30 años cuidando tu salud visual</h2>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
