--- a/html/contacto.html
+++ b/html/contacto.html
@@ -45,7 +45,7 @@
             <p>Contamos con mas de 30 años de experiencia en la venta de anteos y lentes de contacto,
                 a su vez, contamos con un servicio de soporte tecnico, sea cual sea el problema, lo resolvemos.</p>
         </div>
-        <div class="contenedor">
+        <div class="contenedorContacto">
             <div class="redes">
                 <h2>Nuestras Redes</h2>
                 <ul>
@@ -59,6 +59,12 @@
             </div>
         </div>
     </main>
+    <footer>
+      <div class="contenedorFooter">
+          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <h2>Mas de 30 años cuidando tu salud visual</h2>
+      </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
