--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -40,13 +40,27 @@
         </div>
       </nav>
     <main>
-        <div class="contenedor">
-            <img src="/src/anteojos.jpg" alt="anteojos"><figcaption> Nuevo estreno de nuestra marca lider</figcaption>
-            <img src="/src/anteojosDeportivos (1).jpg" alt="anteojosDeportivos"><figcaption> El modelo deportivo que todos quieren</figcaption>
-            <img src="/src/cristalRojo.jpg" alt="cristalRojo"><figcaption>Lo ultimo en cristales espejados</figcaption>
+        <div class="contenedorIngresos">
+          <div class="seccion">
+            <img class="imgSeccion" src="/src/anteojos.jpg" alt="anteojos">
+            <p class="textoSeccion">Nuevo estreno de nuestra marca lider</p>
+          </div>
+          <div class="seccion">
+            <img class="imgSeccion" src="/src/anteojosDeportivos (1).jpg" alt="anteojosDeportivos">
+            <p class="textoSeccion">El modelo deportivo que todos quieren</p>
+          </div>
+          <div class="seccion">
+            <img class="imgSeccion" src="/src/cristalRojo.jpg" alt="cristalRojo">
+            <p class="textoSeccion">Lo ultimo en cristales espejados</p>
+          </div>
         </div>
     </main>
-    
+    <footer>
+      <div class="contenedorFooter">
+          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <h2>Mas de 30 años cuidando tu salud visual</h2>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
