--- a/html/marcas.html
+++ b/html/marcas.html
@@ -40,7 +40,7 @@
         </div>
       </nav>
     <main>
-        <div class="contenedor">
+        <div class="contenedorMarca">
             <div class="marca">
                 <img src="/src/kevingston.jpg" alt="kevingston">
                 <p>En otoño de 1989, en el barrio porteño de Belgrano, la familia fundadora de la marca abrió las puertas del
@@ -59,7 +59,12 @@
             </div>
         </div>
     </main>
-    
+    <footer>
+      <div class="contenedorFooter">
+          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <h2>Mas de 30 años cuidando tu salud visual</h2>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
