--- a/html/accesorios.html
+++ b/html/accesorios.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optica Elda</title>
-    <link rel="shortcut icon" href="src\logoOptica.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/logoOptica.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
-        <h1><a href="/index.html">Optica Elda</a></h1>
+        <h1><a href="../index.html">Optica Elda</a></h1>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -43,34 +43,34 @@
         <div class="categoria">
             <h2>Lentes de contacto</h2>
             <div class="item">
-                <img src="/src/lentesContacto1.jpg" alt="">
-                <img src="/src/lentesContacto2.jpg" alt="">
-                <img src="/src/lentesContacto3.jpg" alt="">
-                <img src="/src/lentesContacto4.jpg" alt="">
+                <img src="../src/lentesContacto1.jpg" alt="">
+                <img src="../src/lentesContacto2.jpg" alt="">
+                <img src="../src/lentesContacto3.jpg" alt="">
+                <img src="../src/lentesContacto4.jpg" alt="">
             </div>
         </div>
         <div class="categoria">
             <h2>Correas</h2>
             <div class="item">
-                <img src="/src/correas1.jpg" alt="">
-                <img src="/src/correas2.jpg" alt="">
-                <img src="/src/correas3.jpg" alt="">
-                <img src="/src/correas4.jpg" alt="">
+                <img src="../src/correas1.jpg" alt="">
+                <img src="../src/correas2.jpg" alt="">
+                <img src="../src/correas3.jpg" alt="">
+                <img src="../src/correas4.jpg" alt="">
             </div>
         </div>
         <div class="categoria">
             <h2>Estuches</h2>
             <div class="item">
-                <img src="/src/estuche1.jpg" alt="">
-                <img src="/src/estuche2.jpg" alt="">
-                <img src="/src/estuche3.jpg" alt="">
-                <img src="/src/estuche4.jpg" alt="">
+                <img src="../src/estuche1.jpg" alt="">
+                <img src="../src/estuche2.jpg" alt="">
+                <img src="../src/estuche3.jpg" alt="">
+                <img src="../src/estuche4.jpg" alt="">
             </div>
         </div>
     </main>
     <footer>
       <div class="contenedorFooter">
-          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <img class="logo" src="../src/logoOptica.jpg" alt="OpticaElda">
           <h2>Mas de 30 años cuidando tu salud visual</h2>
       </div>
     </footer>
