--- a/html/contacto.html
+++ b/html/contacto.html
@@ -7,11 +7,11 @@
     <title>Optica Elda</title>
     <link rel="shortcut icon" href="src\logoOptica.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
-        <h1><a href="/index.html">Optica Elda</a></h1>
+        <h1><a href="../index.html">Optica Elda</a></h1>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
@@ -61,7 +61,7 @@
     </main>
     <footer>
       <div class="contenedorFooter">
-          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <img class="logo" src="../src/logoOptica.jpg" alt="OpticaElda">
           <h2>Mas de 30 años cuidando tu salud visual</h2>
       </div>
     </footer>
