--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optica Elda</title>
-    <link rel="shortcut icon" href="src\logoOptica.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/logoOptica.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
-        <h1><a href="/index.html">Optica Elda</a></h1>
+        <h1><a href="../index.html">Optica Elda</a></h1>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -42,22 +42,22 @@
     <main>
         <div class="contenedorIngresos">
           <div class="seccion">
-            <img class="imgSeccion" src="/src/anteojos.jpg" alt="anteojos">
+            <img class="imgSeccion" src="../src/anteojos.jpg" alt="anteojos">
             <p class="textoSeccion">Nuevo estreno de nuestra marca lider</p>
           </div>
           <div class="seccion">
-            <img class="imgSeccion" src="/src/anteojosDeportivos (1).jpg" alt="anteojosDeportivos">
+            <img class="imgSeccion" src="../src/anteojosDeportivos (1).jpg" alt="anteojosDeportivos">
             <p class="textoSeccion">El modelo deportivo que todos quieren</p>
           </div>
           <div class="seccion">
-            <img class="imgSeccion" src="/src/cristalRojo.jpg" alt="cristalRojo">
+            <img class="imgSeccion" src="../src/cristalRojo.jpg" alt="cristalRojo">
             <p class="textoSeccion">Lo ultimo en cristales espejados</p>
           </div>
         </div>
     </main>
     <footer>
       <div class="contenedorFooter">
-          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <img class="logo" src="../src/logoOptica.jpg" alt="OpticaElda">
           <h2>Mas de 30 años cuidando tu salud visual</h2>
       </div>
     </footer>
