--- a/html/marcas.html
+++ b/html/marcas.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optica Elda</title>
-    <link rel="shortcut icon" href="src\logoOptica.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/logoOptica.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
-        <h1><a href="/index.html">Optica Elda</a></h1>
+        <h1><a href="../index.html">Optica Elda</a></h1>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -42,18 +42,18 @@
     <main>
         <div class="contenedorMarca">
             <div class="marca">
-                <img src="/src/kevingston.jpg" alt="kevingston">
+                <img src="../src/kevingston.jpg" alt="kevingston">
                 <p>En otoño de 1989, en el barrio porteño de Belgrano, la familia fundadora de la marca abrió las puertas del
                     primer local Kevingston. Su estética tradicional,
                     clásica, con detalles de inspiración en el Polo y Rugby argentino, rápidamente cautivó al público de la zona.</p>
             </div>
             <div class="marca"> 
-                <img src="/src/optitech.jpg" alt="optitech">
+                <img src="../src/optitech.jpg" alt="optitech">
                 <p>Línea deportiva Unisex de alta performance, específicamente diseñada para la práctica de diversas actividades.
                     Calidad y materiales de última generación, livianos y resistentes.</p>
             </div>
             <div class="marca">
-                <img src="/src/aqualentes.jpg" alt="aqualentes">
+                <img src="../src/aqualentes.jpg" alt="aqualentes">
                 <p>Aqualentes es una empresa familiar que comenzó sus actividades por el año 2004. Luego de pruebas y errores y con
                      el fin de encontrar la fórmula exacta de fabricación para nuestras antiparras, decidimos salir al mercado al año siguiente.</p>
             </div>
@@ -61,7 +61,7 @@
     </main>
     <footer>
       <div class="contenedorFooter">
-          <img class="logo" src="/src/logoOptica.jpg" alt="OpticaElda">
+          <img class="logo" src="../src/logoOptica.jpg" alt="OpticaElda">
           <h2>Mas de 30 años cuidando tu salud visual</h2>
       </div>
     </footer>
